# NDN-HTTP-Gateway

./: .gitignore  README.md
egw/: CMakeLists.txt  global.h  http_client.cpp  http_client.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_sink.h  http_source.h  main.cpp  message.h  module.h  ndn_client.cpp  ndn_client.h  ndn_consumer.h  ndn_content.cpp  ndn_content.h  ndn_http_interpreter.cpp  ndn_http_interpreter.h  ndn_receiver.cpp  ndn_receiver.h  ndn_resolver.cpp  ndn_resolver.h  ndn_sender.cpp  ndn_sender.h  ndn_server.cpp  ndn_server.h  ndn_sink.h  ndn_source.h  raw_stream.cpp  raw_stream.h  seekable_raw_stream.cpp  sub_module.h
igw/: CMakeLists.txt  global.h  http_ndn_interpreter.cpp  http_ndn_interpreter.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_server.cpp  http_server.h  http_sink.h  http_source.h  main.cpp  message.h  module.h  ndn_client.cpp  ndn_client.h  ndn_consumer.h  ndn_content.cpp  ndn_content.h  ndn_message.cpp  ndn_message.h  ndn_producer.h  ndn_receiver.cpp  ndn_receiver.h  ndn_resolver.cpp  ndn_resolver.h  ndn_sender.cpp  ndn_sender.h  ndn_server.cpp  ndn_server.h  ndn_sink.h  offloaded_ndn_consumer.h  offloaded_ndn_producer.h  raw_stream.cpp  raw_stream.h  seekable_raw_stream.cpp  seekable_raw_stream.h  sub_module.h
ndn_server/: CMakeLists.txt  global.h  http_engine.cpp  http_engine.h  http_request.cpp  http_response.h  http_sink.h  main.cpp  message.h  module.h  ndn_consumer.h  ndn_content.h  ndn_http_interpreter.cpp  ndn_http_interpreter.h  ndn_receiver.cpp  ndn_resolver.cpp  ndn_resolver.h  ndn_sender.cpp  ndn_sender.h  ndn_sink.h  ndn_source.h  offloaded_ndn_consumer.h  seekable_raw_stream.h
ndn_server/html/: 404.html  index.html
